Increase contrast, fix format

--- a/private/static/css/default.css
+++ b/private/static/css/default.css
@@ -5,8 +5,8 @@ body {
     max-width: 800px;
     line-height: 1.6;
     font-size: 18px;
-    color: #444;
-    padding: 0 10px
+    color: #333;
+    padding: 0 10px;
 }
 
 /* Footer */
@@ -40,7 +40,7 @@ h1, h2, h3 {
 
 a {
     text-decoration: underline;
-    color: #444;
+    color: #333;
 }
 
 a:hover {
